# nodalida25_sami_ocr

./: .gitignore  .pre-commit-config.yaml  README.md  compare_results.ipynb  compose.yml  data_preparation_guide.md  første_tegn_ulikt.ipynb  get_transcriptions_from_transcribus.ipynb  pyproject.toml  pyrightconfig.json  rearrange_data.ipynb  ressurskatalog.md  tesseract_howto.md  tesseract_transcribe.ipynb  weighted_edit_distance.ipynb
data/common/: samiske_bokstaver_med_sprak.csv  testset_languages.tsv  trainset_languages.tsv
info_markdown_files/: model_card_template.md  ressurskatalog.md
notebooks/: cer_wer_tables.ipynb  compare_results.ipynb  compare_with_nb.ipynb  create_baseline_data.ipynb  dataset_info.ipynb  eval_character_wise.ipynb  eval_language_wise.ipynb  eval_overall.ipynb  get_transcriptions_from_transcribus.ipynb  inspect_bad_lines.ipynb  more_tables.ipynb  sami_letters.ipynb  siste_tegn_ulikt.ipynb  tegn_og_bokstaver.tsv  testset_tables.ipynb
notebooks/plots/: eval_character_wise.ipynb  eval_language_wise.ipynb  eval_overall.ipynb
notebooks/tables/: cer_wer_tables.ipynb  character_errors.ipynb  giellatekno_table.ipynb  language_distribution.ipynb  testset_tables.ipynb
notebooks/transkribus/: compare_predictions_on_testsets.ipynb  transkribus_bboxes.ipynb  transkribus_bboxes_test.ipynb  transkribus_bboxes_val.ipynb  transkribus_with_and_without_lm.ipynb  triple_check_dataset_exports.ipynb
notebooks/trocr/: Multi-run-evaluation.ipynb
sample_data/: example_image.gt.txt  example_image.tif
scripts/: create_line_level_dataset.py  evaluate_baseline_predictions.sh  evaluate_giellatekno_predictions.sh  evaluate_testset_predictions.sh  evaluate_valset_predictions.sh  predict_on_baseline.sh  predict_on_giellatekno.sh  predict_on_testset.sh  predict_on_valset.sh  transkribus_data_to_lines.py
scripts/baseline/: predict_baseline.py
scripts/divvungiellatekno-data/: huggingface_to_page.py  make_giellatekno_huggingface.py
scripts/tesseract/: eval_validation.sh  tesseract_eval_test.sh  tesseract_transcribe.sh  transcribe_valset.sh
scripts/transkribus/: create_new_baseline_prediction_file.py  create_new_giellatekno_prediction_file.py  create_new_testset_prediction_file.py  create_transkribus_bbox_testset.py  create_transkribus_bbox_testset_with_newspapers.py  valset_prediction_exports.sh
scripts/trocr/: evaluate_model.py  make_splits.py  model_to_hf_hub.py  models_to_hf_hub.py  (+3 more)
src/: clean_text_data.py  evaluate_predictions.py  find_bad_boxes.py  line_data_to_dataset.py  map_transkribus_lines_to_gt_lines.py  tesseract_transcribe.py  transkribus_data_to_lines.py  transkribus_export_to_line_data.py  transkribus_export_to_prediction_file.py  utils.py
tesseract_models/: README.md  smx2_30000.traineddata  smx2_40000.traineddata  smx_30000.traineddata  smx_40000.traineddata  smx_50000.traineddata
tests/: conftest.py  test_create_dataset.py  test_page_image_stem_to_urn_page.py  utils.py
trocr_models/: README.md
(+85 files in other folders)
